n8n/n8n-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: n8n
  name: n8n
  namespace: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      service: n8n
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: n8n
    spec:
      nodeSelector:
        l4-gpu: "true"
      containers:
      - command:
        - /bin/sh
        args:
        - -c
        - sleep 5; n8n start
        image: n8nio/n8n:stable
        name: n8n
        ports:
        - containerPort: 5678
        resources:
          requests:
            memory: "2048Mi"
          limits:
            memory: "4096Mi"
        volumeMounts:
        - mountPath: /home/node/.n8n
          name: n8n-claim0
      restartPolicy: Always
      volumes:
      - name: n8n-claim0
        persistentVolumeClaim:
          claimName: n8n-claim0
      - name: n8n-secret
        secret:
          secretName: n8n-secret
      - name: postgres-secret
        secret:
          secretName: postgres-secret
