n8n/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: postgres-n8n
  name: postgres
  namespace: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      service: postgres-n8n
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        service: postgres-n8n
    spec:
      nodeSelector:
        l4-gpu: "true"
      containers:
      - image: postgres:16
        name: postgres
        resources:
          limits:
            cpu: "4"
            memory: 4Gi
          requests:
            cpu: "1"
            memory: 2Gi
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgresql-pv
          mountPath: /var/lib/postgresql/data
        - name: init-data
          mountPath: /docker-entrypoint-initdb.d/init-n8n-user.sh
          subPath: init-data.sh
      restartPolicy: Always
      volumes:
      - name: postgresql-pv
        persistentVolumeClaim:
          claimName: postgresql-pv
      - name: postgres-secret
        secret:
          secretName: postgres-secret
      - name: init-data
        configMap:
          name: init-data
          defaultMode: 0744
