n8n/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: postgres-n8n
  name: postgres-service
  namespace: n8n
spec:
  clusterIP: None
  ports:
  - name: "5432"
    port: 5432
    targetPort: 5432
    protocol: TCP
  selector:
    service: postgres-n8n
